#2 - Add headers, text, and image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-  <h1>Fortunato Estorgio | Web Developer Portfolio</h1>
+  <div class="container">
+    <section id="landing">
+      <h1>Fortunato Estorgio</h1>
+      <h2>Web Developer Portfolio</h2>
+      <p>Hello, I'm Fortunato Estorgio and I love to create things from scratch.</p>
+      <img src="images/me.jpg" alt="Profile Pic">
+    </section>
+    <section id="gallery"></section>
+  </div>
   
 </body>
 </html>
