#3 Add content for languages and tools

--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
       <p>Hello, I'm Fortunato Estorgio and I love to create things from scratch.</p>
       <img src="images/me.jpg" alt="Profile Pic">
     </section>
-    <section id="gallery"></section>
+    <section id="gallery">
+      <div class="tools">
+        <h2>Languages I Speak</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ul>
+      </div>
+      <div class="tools">
+        <h2>Tools I Use</h2>
+        <ul>
+          <li>Git Bash (Terminal)</li>
+          <li>Visual Studio Code</li>
+          <li>GitHub</li>
+          <li>Google Chrome</li>
+        </ul>
+      </div>
+    </section>
   </div>
   
 </body>
