--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -29,7 +29,7 @@
     </div>
   </nav>
   <div class="container-fluid">
-    <section id="landing" class="jumbotron text-center mt-3">
+    <section id="landing" class="jumbotron text-center">
       <h1>Fortunato Estorgio</h1>
       <h2>Web Developer Portfolio</h2>
       <p>Hello, I'm Fortunato Estorgio and I love to create things from scratch.</p>
